--- a/manifest.json
+++ b/manifest.json
@@ -1,52 +1,40 @@
-{
-    "name": "Antena Dorada Fm ",
-    "short_name": "Antena Dorada Fm",
-    "description": "Señal que Avanza",
-    "icons": [
-        {
-            "src": "img/logo.png",
-            "sizes": "32x32",
+
+	"name": "Radio Sabor Tropicalisima",
+	"short_name": "Radio Sabor Tropicalisima",
+	"description": "Radio Sabor Tropicalisima",
+	"icons" : [
+		 {
+            "src": "imagenes/app.png",
+            "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "img/logo.png",
-            "sizes": "48x48",
+            "src": "imagenes/app.png",
+            "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "img/logo.png",
+            "src": "imagenes/app.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "img/logo.png",
+            "src": "imagenes/app.png",
             "sizes": "96x96",
             "type": "image/png"
-        },
-        {
-            "src": "img/logo.png",
-            "sizes": "128x128",
-            "type": "image/png"
-        },
-        {
-            "src": "img/logo.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "img/logo.png",
-            "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "maskable"
-        },
-        {
-            "src": "img/logo.png",
-            "sizes": "192x192",
-            "type": "image/png"
         }
-    ],
-    "start_url": "index.html",
-    "display": "standalone",
-    "theme_color": "#f7a84d",
-    "background_color": "#f7a84d"
+	],
+	"start_url": "./?mode=pwa",
+	"theme_color": "#00b6aa",
+	"background_color": "#00b6aa",
+	"orientation": "portrait",
+	"display": "fullscreen",
+	"display_override": [
+		"fullscreen"
+	],
+	"lang": "ru",
+	"dir": "ltr",
+	"categories": [
+		"music"
+	]
 }
