--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 
-	"name": "Radio Sabor Tropicalisima",
-	"short_name": "Radio Sabor Tropicalisima",
-	"description": "Radio Sabor Tropicalisima",
+	"name": "Mariela Fm",
+	"short_name": "Mariela Fm",
+	"description": "Mariela Fm",
 	"icons" : [
 		 {
             "src": "imagenes/app.png",
