--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
             "type": "image/png"
         }
 	],
-	"start_url": "./?mode=pwa",
+	"start_url": "index.html",
 	"theme_color": "#00b6aa",
 	"background_color": "#00b6aa",
 	"orientation": "portrait",
