--- a/manifest.json
+++ b/manifest.json
@@ -1,40 +1,52 @@
-}
-	"name": "Mariela Fm",
-	"short_name": "Mariela Fm",
-	"description": "Mariela Fm",
-	"icons" : [
-		 {
-            "src": "imagenes/app.png",
-            "sizes": "192x192",
+{
+    "name": "Mariela Fm ",
+    "short_name": "Mariela Fm ",
+    "description": "Te Acompaña",
+    "icons": [
+        {
+            "src": "img/logo.png",
+            "sizes": "32x32",
             "type": "image/png"
         },
         {
-            "src": "imagenes/app.png",
-            "sizes": "512x512",
+            "src": "img/logo.png",
+            "sizes": "48x48",
             "type": "image/png"
         },
         {
-            "src": "imagenes/app.png",
+            "src": "img/logo.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "imagenes/app.png",
+            "src": "img/logo.png",
             "sizes": "96x96",
             "type": "image/png"
+        },
+        {
+            "src": "img/logo.png",
+            "sizes": "128x128",
+            "type": "image/png"
+        },
+        {
+            "src": "img/logo.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "img/logo.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "img/logo.png",
+            "sizes": "192x192",
+            "type": "image/png"
         }
-	],
-	"start_url": "index.html",
-	"theme_color": "#00b6aa",
-	"background_color": "#00b6aa",
-	"orientation": "portrait",
-	"display": "fullscreen",
-	"display_override": [
-		"fullscreen"
-	],
-	"lang": "ru",
-	"dir": "ltr",
-	"categories": [
-		"music"
-	]
+    ],
+    "start_url": "index.html",
+    "display": "standalone",
+    "theme_color": "#f7a84d",
+    "background_color": "#f7a84d"
 }
